@@ -132,7 +132,7 @@ string(44) "Cannot access non-public member B::protected"
 string(50) "Cannot access non-public member B::protectedStatic"
 string(42) "Cannot access non-public member A::private"
 string(1) "a"
-string(1) "b"
+string(1) "f"
 string(1) "c"
 string(1) "e"
 string(1) "f"
